gccida/g2/inlinable_function_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1128:37: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
int  inlinable_function_p( tree fn, inline_data_0 *id) 
                                    ^~~~~~~~~~~~~
                                    inline_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1142:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1142:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1150:14: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
&& ( ( v11 = lang_hooks_0.tree_inlining.disregard_inline_limits( fn), fn = fnp, v11) 
             ^~~~~~~~~~~~
             lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1150:64: error: called object type '<dependent type>' is not a function or function pointer
&& ( ( v11 = lang_hooks_0.tree_inlining.disregard_inline_limits( fn), fn = fnp, v11) 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1154:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_inlining.disregard_inline_limits( fn) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1154:56: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_inlining.disregard_inline_limits( fn) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1161:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v3 = lang_hooks_0.tree_inlining.disregard_inline_limits( fn); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1161:56: error: called object type '<dependent type>' is not a function or function pointer
v3 = lang_hooks_0.tree_inlining.disregard_inline_limits( fn); 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1181:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_inlining.cannot_inline_tree_fn( &fnp) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1181:54: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_inlining.cannot_inline_tree_fn( &fnp) 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1210:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &inlined_fns->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1211:9: error: use of undeclared identifier 'p_int_cst'
while ( p_int_cst->low != fns->data.l[0] ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1213:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1213:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1213:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1213:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/tree-inline.c:1214:79: error: use of undeclared identifier 'p_int_cst'
if ( &inlined_fns->block.subblocks + ( unsigned int)( length - 1) == ( tree *)p_int_cst ) 
                                                                              ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/inlinable_function_p/src/obj/tree-inline.o] Error 1
